<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:layout_gravity="right"
	 android:id="@+id/tab_2"
	android:orientation="vertical"
	      xmlns:android="http://schemas.android.com/apk/res/android">
	<TextView android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:id="@+id/tvTitle"
		  android:textStyle="bold"
		  android:textSize="24dip"
		  android:text="@string/gSettings">
	</TextView>
	<TextView android:id="@+id/TextView03"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content">
	</TextView>

        <LinearLayout android:orientation="horizontal"
                      android:id="@+id/LinearLayout02"
		      android:layout_height="wrap_content"
		      android:layout_width="fill_parent">	
        </LinearLayout>

	<TextView android:id="@+id/TextView02"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:text="@string/remoteIp">
	</TextView>
	<EditText android:layout_height="wrap_content"
		  android:layout_width="fill_parent"
		  android:id="@+id/etRemoteIp" >
	</EditText>
	
	<EditText android:layout_height="wrap_content"
		  android:layout_width="fill_parent"
		  android:id="@+id/etRemotePort" >
	</EditText>
	
	<LinearLayout android:orientation="horizontal"
                      android:id="@+id/LinearLayout03"
		      android:layout_height="wrap_content"
		      android:layout_width="fill_parent">
        <RadioGroup
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:id="@+id/radio_group1">
                  <RadioButton
                          android:id="@+id/radio_opengl"
                          android:onClick="onClick"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/opengl"
                          android:checked="true"
                          android:textColor="#fff"/>
                 <RadioButton
                          android:id="@+id/radio_surface"
                          android:onClick="onClick"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/surfaceview"
                          android:textColor="#fff" />
                 <RadioButton
                          android:id="@+id/radio_mediacodec"
                          android:onClick="onClick"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/mediacodec"
                          android:textColor="#fff" />
        </RadioGroup>
	</LinearLayout>

</LinearLayout>
